Adicionando migrations e Pasta para arquivos estaticos

--- a/ProjetoPCA/templates/index.html
+++ b/ProjetoPCA/templates/index.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Pagina inicial</title>
+    <link rel="stylesheet" href="{% static 'CSS/estilo.css' %}">
 </head>
 <body>
     <form method="get" autofocus>
