Estrutura de pagina adicionadas, views e urls adicionadas

--- a/ProjetoPCA/templates/sobre.html
+++ b/ProjetoPCA/templates/sobre.html
@@ -1,13 +1,13 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pagina inicial</title>
+    <title>Sobre</title>
     <link rel="stylesheet" href="{% static 'CSS/estilo.css' %}">
     <link href="{% static 'images/brain.png' %}" rel="shortcut icon" type="image/x-icon" />
-</head>
 
+</head>
 <body>
 <header>
     <nav>
@@ -25,26 +25,10 @@
     </nav>
 </header>
 
+
 <section>
 
 </section>
-
-<!--
-    <form method="get" autofocus>
-        <input name="cep" id="cep" placeholder="Digite um cep" type="number" style="width: 140px; height: 25px; border-radius: 5px" maxlength="8">
-        <p></p>
-        <button style="border-radius: 3px; width: 80px; height: 30px; margin-left: 30px"  onclick="pegaCep()" >Pesquisar</button>
-    </form>
-<p id="teste1" style="color: red; font-family: 'Roboto', 'Lucida Grande', Verdana, Arial, sans-serif ">{{printar.chave}}</p>
-
-
-<p id="teste" >{{printar.uf}}</p>
-
-<p id="mostra"></p>
--->
-
-
-
 
 
 <footer>
