--- a/ProjetoPCA/templates/sobre.html
+++ b/ProjetoPCA/templates/sobre.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <title>Sobre</title>
     <link rel="stylesheet" href="{% static 'CSS/estilo.css' %}">
+    <link rel="stylesheet" href="{% static 'CSS/sobre.css' %}">
     <link href="{% static 'images/brain.png' %}" rel="shortcut icon" type="image/x-icon" />
-
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 <header>
@@ -27,7 +28,21 @@
 
 
 <section>
-
+    <div id="foto1">
+        <img/>
+    </div>
+     <div id="foto2">
+        <img/>
+    </div>
+     <div id="foto3">
+        <img/>
+    </div>
+     <div id="foto4">
+        <img/>
+    </div>
+     <div id="foto5">
+        <img/>
+    </div>
 </section>
 
 
