--- a/ProjetoPCA/templates/jogo.html
+++ b/ProjetoPCA/templates/jogo.html
@@ -6,7 +6,7 @@
     <title>Jogo</title>
     <link rel="stylesheet" href="{% static 'CSS/estilo.css' %}">
     <link href="{% static 'images/brain.png' %}" rel="shortcut icon" type="image/x-icon" />
-
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 <header>
@@ -26,6 +26,20 @@
 </header>
 
 <section>
+
+    <!--
+    <form method="get" autofocus>
+        <input name="cep" id="cep" placeholder="Digite um cep" type="number" style="width: 140px; height: 25px; border-radius: 5px" maxlength="8">
+        <p></p>
+        <button style="border-radius: 3px; width: 80px; height: 30px; margin-left: 30px"  onclick="pegaCep()" >Pesquisar</button>
+    </form>
+<p id="teste1" style="color: red; font-family: 'Roboto', 'Lucida Grande', Verdana, Arial, sans-serif ">{{printar.chave}}</p>
+
+
+<p id="teste" >{{printar.uf}}</p>
+
+<p id="mostra"></p>
+-->
 
 </section>
 
