--- a/ProjetoPCA/templates/index.html
+++ b/ProjetoPCA/templates/index.html
@@ -26,14 +26,16 @@
     </nav>
 </header>
 
-<h1>Uma nova maneira de aprender</h1>
+<div id="sobre">
+    <h1>Uma nova maneira de aprender</h1>
+</div>
 
 
 <section id="info-container">
-      <div id="imagem" >
+    <div id="imagem" >
         <img src="{% static 'images/imagem.jpg' %}"/>
     </div>
-       <div id="texto">
+    <div id="texto">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a mauris eros. Orci varius natoque penatibus et
             magnis dis parturient montes, nascetur ridiculus mus. Maecenas eleifend finibus lectus at gravida. Integer
             bibendum elementum aliquet. Praesent leo ipsum, ultrices ac elit sed, aliquam rhoncus risus.
@@ -50,8 +52,6 @@
             ipsum non turpis ultricies hendrerit.
         </p>
     </div>
-
-
 </section>
 
 
