--- a/ProjetoPCA/templates/sobre.html
+++ b/ProjetoPCA/templates/sobre.html
@@ -26,28 +26,36 @@
     </nav>
 </header>
 
+<div id="sobre">
+    <h1>Desenvolvedores</h1>
+</div>
 
 <section>
-    <div id="foto1">
-        <img/>
+    <div class="foto">
+        <img src="{% static 'images/foto1.png' %}"/>
+        <p>Sighy</p>
     </div>
-     <div id="foto2">
-        <img/>
+     <div class="foto">
+        <img src="{% static 'images/foto2.png' %}"/>
+         <p>Tayná</p>
     </div>
-     <div id="foto3">
-        <img/>
+     <div class="foto">
+        <img src="{% static 'images/foto3.png' %}"/>
+         <p>Jonathan</p>
     </div>
-     <div id="foto4">
-        <img/>
+     <div class="foto">
+        <img src="{% static 'images/foto4.png' %}"/>
+         <p>João</p>
     </div>
-     <div id="foto5">
-        <img/>
+     <div class="foto">
+        <img src="{% static 'images/foto5.png' %}"/>
+         <p>Monvar</p>
     </div>
 </section>
 
 
 <footer>
-        <p>Copyright© 2021 EducaGames - Todos os direitos reservados</p>
+    <p>Copyright© 2021 EducaGames - Todos os direitos reservados</p>
 </footer>
 
 <script type="text/javascript" src="{% static 'Js/scripts.js' %}"></script>
