--- a/ProjetoPCA/templates/jogo.html
+++ b/ProjetoPCA/templates/jogo.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <nav>
-       <a class="logo" href="/">EducaGames</a>
+       <a class="logo" href="/">EducaGame</a>
         <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -44,7 +44,7 @@
 </section>
 
 <footer>
-        <p>Copyright© 2021 EducaGames - Todos os direitos reservados</p>
+        <p>Copyright© 2021 EducaGame - Todos os direitos reservados</p>
 </footer>
 
 <script type="text/javascript" src="{% static 'Js/scripts.js' %}"></script>
