--- a/ProjetoPCA/templates/sobre.html
+++ b/ProjetoPCA/templates/sobre.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <nav>
-       <a class="logo" href="/">EducaGames</a>
+       <a class="logo" href="/">EducaGame</a>
         <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -33,29 +33,44 @@
 <section>
     <div class="foto">
         <img src="{% static 'images/foto1.png' %}"/>
-        <p>Sighy</p>
+        <div class="icone">
+            <p>Sighy</p>
+           <a href="https://github.com/sighy16" target="_blank"><img src="{% static 'images/github.png' %}"/></a>
+        </div>
     </div>
      <div class="foto">
         <img src="{% static 'images/foto2.png' %}"/>
-         <p>Tayná</p>
+         <div class="icone">
+             <p>Tayná</p>
+            <a href="https://github.com/taynamoreira" target="_blank"> <img src="{% static 'images/github.png' %}"/></a>
+         </div>
     </div>
      <div class="foto">
         <img src="{% static 'images/foto3.png' %}"/>
-         <p>Jonathan</p>
+         <div class="icone">
+             <p>Jonathan</p>
+             <a href="https://github.com/JKovansky" target="_blank"><img src="{% static 'images/github.png' %}"/></a>
+         </div>
     </div>
      <div class="foto">
         <img src="{% static 'images/foto4.png' %}"/>
-         <p>João</p>
+         <div class="icone">
+             <p>João</p>
+             <a href="https://github.com/joaopver10" target="_blank"><img src="{% static 'images/github.png' %}"/></a>
+         </div>
     </div>
      <div class="foto">
         <img src="{% static 'images/foto5.png' %}"/>
-         <p>Monvar</p>
+         <div class="icone">
+             <p>Monvar</p>
+             <a href="https://github.com/Monvar" target="_blank"><img src="{% static 'images/github.png' %}"/></a>
+         </div>
     </div>
 </section>
 
 
 <footer>
-    <p>Copyright© 2021 EducaGames - Todos os direitos reservados</p>
+    <p>Copyright© 2021 EducaGame - Todos os direitos reservados</p>
 </footer>
 
 <script type="text/javascript" src="{% static 'Js/scripts.js' %}"></script>
