--- a/ProjetoPCA/static/CSS/estilo.css
+++ b/ProjetoPCA/static/CSS/estilo.css
@@ -6,12 +6,12 @@
 }
 
 
-a {
+header nav a {
     text-decoration: none;
     color: #fff;
 }
 
-a:hover{
+header nav a:hover{
     opacity: 0.7;
 }
 
@@ -21,6 +21,21 @@ a:hover{
     letter-spacing: 2px;
 }
 
+h1::after{
+    content: '|';
+    margin-left: 5px;
+    opacity: 1;
+    animation: pisca .7s infinite;
+}
+
+@keyframes pisca{
+    0%, 100%{
+        opacity: 1;
+    }
+     50%{
+        opacity: 0;
+    }
+}
 
 nav{
     display: flex;
@@ -110,9 +125,9 @@ footer p{
 #sobre{
     border-bottom: 2px solid #121CD1 ;
     text-align: center;
-    margin: 3% auto;
+    margin: 4% auto;
     max-width: 960px;
-    padding-bottom: 2%;
+    padding-bottom: 4%;
 }
 
 #imagem{
@@ -123,9 +138,7 @@ footer p{
 #texto{
     width: 550px;
 }
-#texto p{
-    margin: 0 10px 10px 10px;
-}
+
 
 @keyframes navLinkFade {
     from{
@@ -147,6 +160,33 @@ footer p{
 
 .mobile-menu.active .line3{
     transform:  rotate(45deg) translate(-5px, -7px);
+
+}
+
+@media only screen and (max-width: 999px){
+    #info-container{
+        display: flex;
+        max-width: 960px;
+        margin: 3% auto;
+        align-content: center;
+        padding-top: 10px;
+        justify-content: center;
+
+    }
+    #texto{
+        width: 960px;
+    }
+
+    #texto p{
+        font-size: 1.2em;
+        padding: 20px;
+        margin: 0;
+
+    }
+    img{
+        display: block;
+        max-width: 100%;
+    }
 
 }
 
