--- a/ProjetoPCA/templates/index.html
+++ b/ProjetoPCA/templates/index.html
@@ -20,13 +20,13 @@
         </div>
         <ul class="nav-list">
             <li><a href="{% url 'index' %}"> Inicio</a></li>
-            <li><a href="{% url 'jogo' %}"> Jogar</a></li>
+            <li><a href="{% url 'curiosidades' %}"> Curiosidades</a></li>
             <li><a href="{% url 'sobre' %}">Sobre</a> </li>
         </ul>
     </nav>
 </header>
 
-<div id="sobre">
+<div id="sobre-index">
     <h1>Uma nova maneira de aprender</h1>
 </div>
 
