--- a/ProjetoPCA/templates/sobre.html
+++ b/ProjetoPCA/templates/sobre.html
@@ -19,14 +19,14 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-list">
-            <li><a href="{% url 'index' %}"> Inicio</a></li>
-            <li><a href="{% url 'jogo' %}"> Jogar</a></li>
+            <li><a href="{% url 'index' %}">Inicio</a></li>
+            <li><a href="{% url 'curiosidades' %}">Curiosidades</a></li>
             <li><a href="{% url 'sobre' %}">Sobre</a> </li>
         </ul>
     </nav>
 </header>
 
-<div id="sobre">
+<div id="sobre-sobre">
     <h1>Desenvolvedores</h1>
 </div>
 
