--- a/ProjetoPCA/static/CSS/sobre.css
+++ b/ProjetoPCA/static/CSS/sobre.css
@@ -24,18 +24,32 @@ section p{
     opacity: 0.7;
 }
 
+#sobre-sobre{
+    border-bottom: 2px solid #AB27EC ;
+    text-align: center;
+    margin: 4% auto;
+    max-width: 960px;
+    padding-bottom: 4%;
+}
 
-@media only screen and (max-width: 600px){
+
+@media only screen and (max-width: 1024px){
     section{
         display: flex;
         justify-content: space-between;
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap;
         text-align: center;
-        margin: 5% auto;
+        margin: 3% auto;
         align-items: center;
         max-width: 800px;
+        min-height: 74vh;
+    }
 
+}
+@media only screen and (max-width: 600px){
+    section{
+        flex-direction: column;
     }
 
 }
