--- a/ProjetoPCA/templates/index.html
+++ b/ProjetoPCA/templates/index.html
@@ -36,26 +36,25 @@
         <img src="{% static 'images/imagem.jpg' %}"/>
     </div>
     <div id="texto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a mauris eros. Orci varius natoque penatibus et
-            magnis dis parturient montes, nascetur ridiculus mus. Maecenas eleifend finibus lectus at gravida. Integer
-            bibendum elementum aliquet. Praesent leo ipsum, ultrices ac elit sed, aliquam rhoncus risus.
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus accumsan
-            erat congue turpis consectetur venenatis. Nulla quis velit nec magna iaculis ornare et id ante.
-            Fusce tincidunt, augue id eleifend pretium, turpis turpis venenatis risus, quis tempus ipsum nulla
-            tempor augue. Vestibulum ac aliquam metus. Pellentesque habitant morbi tristique senectus et netus et
-            malesuada fames ac turpis egestas. Pellentesque egestas gravida interdum. Aliquam erat volutpat.
-            Cras euismod nisi ut sem tincidunt congue.
-
-            Nam sed vestibulum purus. In hac habitasse platea dictumst. Sed porttitor elementum orci, id elementum
-            sapien. Sed nulla orci, maximus sit amet porttitor sit amet, auctor a arcu. Etiam viverra vestibulum ligula
-            pellentesque porttitor. Integer vitae velit semper, bibendum neque malesuada, sagittis dolor. Nam semper
-            ipsum non turpis ultricies hendrerit.
+        <p>A pandemia causada pelo coronavírus impactou a vida de inúmeras pessoas, tanto a vida social quanto o modelo
+            de ensino. O Ensino à distância (EAD) existe como modelo alternativo cuja principal característica é o
+            ensino à distância. O impacto da pandemia fez com que as escolas e universidades tivessem que se adaptar
+            para um ensino remoto emergencial.
+        </p>
+        <br>
+        <p>Com o isolamento social pensamos em desenvolver um site que você pode navegar e descobrir curiosidades sobre
+            algo do seu interesse, e assim você pode acabar aprendendo algo que pode ajudar você no futuro. No momento
+            contamos com uma base de dados pequena para pesquisa, então no momento você pode pesquisar sobre alguns
+            estados e sua história, temos uma lista de sugestões no próprio campo para digitar, eles são os lugares
+            disponíveis até o momento.
+        </p>
+        <br>
+        <p> Para tudo isso acontecer temos uma api de cep vinculada ao nosso campo de digitação e filtrada no banco de
+            dados, para ser redirecionado basta clicar <a href="{% url 'curiosidades' %}"><strong>aqui</strong> </a> ou
+            então você pode clicar na aba <i><strong>Curiosidades</strong> </i>.
         </p>
     </div>
 </section>
-
-
-
 
 
 <footer>
